kubernetes/oauth2-proxy/oauth2-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      serviceAccountName: oauth2-proxy
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --provider=oidc
            - --skip-oidc-discovery
            - --oidc-issuer-url=https://keycloak.ebruno.fr/realms/platform
            - --oidc-jwks-url=https://keycloak.ebruno.fr/realms/platform/protocol/openid-connect/certs
            - --login-url=https://keycloak.ebruno.fr/realms/platform/protocol/openid-connect/auth
            - --redeem-url=https://keycloak.ebruno.fr/realms/platform/protocol/openid-connect/token
            - --profile-url=https://keycloak.ebruno.fr/realms/platform/protocol/openid-connect/userinfo
            - --scope=openid email profile
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --cookie-secure=true
            - --cookie-samesite=none
            - --cookie-domain=.ebruno.fr
            - --set-authorization-header
            - --pass-access-token
            - --whitelist-domain=*
            - --reverse-proxy
            - --ssl-upstream-insecure-skip-verify
            - --cookie-refresh=1m
            - --redirect-url=https://sonarqube.ebruno.fr/oauth2/callback
            - --skip-auth-route=/ready
            - --skip-auth-route=/healthz
            - --skip-auth-route=/healthcheck
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: 4180
            initialDelaySeconds: 5
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
      name: http
